--- a/dataset/.gitattributes
+++ b/dataset/.gitattributes
@@ -1,1 +1,3 @@
 pothole.zip filter=lfs diff=lfs merge=lfs -text
+balloon_dataset.zip filter=lfs diff=lfs merge=lfs -text
+pothole_old.zip filter=lfs diff=lfs merge=lfs -text
